# MemorySearch

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Run.bat  main.cpp
core/: CMakeLists.txt
core/Mem/: Mem.cpp  Mem.hpp  Membase.cpp  Membase.hpp  ProcMap.hpp  Process.cpp  Process.hpp  Search.cpp  Search.hpp
jni/: Android.mk  Application.mk
test/: CMakeLists.txt  test1.cpp  test2.cpp
